--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9340,6 +9340,82 @@
         "th":"",
         "id":""
     },
+	"item.3176.name":{
+		"en":"[Spirit Egg] King Assault Captain",
+        "fr":"[Oeuf d'esprit] Capitaine d'Assaut du Roi",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"item.3177.name":{
+		"en":"[Spirit Egg] Mechanical Manticore",
+        "fr":"[Oeuf d'esprit] Manticore Mécanique",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"item.3178.name":{
+		"en":"[Spirit Egg] Scythie",
+        "fr":"[Oeuf d'esprit] Scythie",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+	"item.3179.name":{
+		"en":"[Spirit Egg] Undead Pharaoh",
+        "fr":"[Oeuf d'esprit] Pharaon mort-vivant",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     
     "item.3801.name":{
         "en":"[Spirit Egg] Immortal",
