--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -239,7 +239,7 @@
         "de":"EXP",
         "jp":"",
         "pt":"",
-        "vi":"Kinh Nghiệm",
+        "vi":"EXP",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2918,7 +2918,7 @@
         "de":"Herstellungs EXP",
         "jp":"",
         "pt":"",
-        "vi":"Kinh Nghiệm Chế Tạo",
+        "vi":"EXP Chế Tạo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6034,7 +6034,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhận thưởng Kinh Nghiệm Hàng Ngày",
+        "vi":"Nhận thưởng EXP Hàng Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6053,7 +6053,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Mua K.Nghiệm sẽ cho bạn {1}% K.Nghiệm ở cấp hiện tại của bạn. Mỗi ngày chỉ được một lần và sẽ tốn {0} Vàng.",
+        "vi":"Mua EXP sẽ cho bạn {1}% EXP ở cấp hiện tại của bạn. Mỗi ngày chỉ được một lần và sẽ tốn {0} Vàng.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6205,7 +6205,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tham gia Phụ Bản Kinh Nghiệm",
+        "vi":"Tham gia Phụ Bản EXP",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8200,7 +8200,7 @@
         "de":"",
         "jp":"",
         "pt":"",    
-        "vi":"Kinh nghiệm nguyên tố hiện có: {0}",
+        "vi":"EXP nguyên tố hiện có: {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8219,7 +8219,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Kinh nghiệm nguyên tố cần: {0}",
+        "vi":"EXP nguyên tố cần: {0}",
         "ar":"",
         "it":"",
         "pl":"",
