--- a/Translation/event.json
+++ b/Translation/event.json
@@ -182,7 +182,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bạn có thể vào sự kiện bất kỳ lúc nào, nhưng đây là khu PvP. Bạn chỉ có thể thu thập 10 Lõi Dung Nham vào túi mỗi lần, và sử dụng 5 Lõi Dung Nham mỗi ngày. Lõi Dung Nham cung cấp K.Nghiệm nguyên tố, nhưng luôn được 2 giám hộ canh gác.",
+        "vi":"Ra vào bất kỳ, nhưng là khu PvP. Có thể tích trữ 10 Lõi Dung Nham trong túi, và sử dụng 5 Lõi Dung Nham mỗi ngày. Lõi Dung Nham cho EXP nguyên tố, nhưng luôn được 2 giám hộ canh gác.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -201,7 +201,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Lõi dung nham xuất hiện mỗi {0} giây, và chỉ hồi lại khi tiêu diệt giám hộ. Cũng có khoảng thời gian trong ngày mà việc hồi lại diễn ra nhanh hơn rất nhiều và xuất hiện mỗi {1} giây.",
+        "vi":"Lõi dung nham xuất hiện mỗi {0} giây, và chỉ hồi lại khi tiêu diệt giám hộ. Có khung giờ đặc biệt nhanh hơn và xuất hiện mỗi {1} giây.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -258,7 +258,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"K.Nghiệm, Mã Kim",
+        "vi":"EXP, Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -296,7 +296,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"K.Nghiệm, Đá Celebream, Vàng, Mã Kim",
+        "vi":"EXP, Ma Tinh, Vàng, Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -315,7 +315,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Trong sự kiện này, bạn có thể thủ thập bom và rương. Bom được sử dụng để chống lại người chơi khác, nhưng cũng cho K.Nghiệm và Vàng khi nhặt lên. Rương cho Celebeams cấp 50 và 70 phụ thuộc vào loại rương. Tất cả rương đều cho Mã Kim và Vàng. Tất cả phần thưởng K.Nghiệm, Mã Kim và Vàng phụ thuộc vào cấp của bạn.<br>Ở trung tâm bản đồ có một chiếc rương hoàng kim. Nó sẽ bị khóa trong hầu hết thời gian sự kiện và không chứa Celebeams, nhưng cho 10 lần Mã Kim.",
+        "vi":"Trong sự kiện này, bạn có thể thủ thập bom và rương. Bom được sử dụng để chống lại người chơi khác, nhưng cũng cho EXP và Vàng khi nhặt lên. Rương cho Celebeams cấp 50 và 70 phụ thuộc vào loại rương. Tất cả rương đều cho Mã Kim và Vàng. Tất cả phần thưởng EXP, Mã Kim và Vàng phụ thuộc vào cấp của bạn.<br>Ở trung tâm bản đồ có một chiếc rương hoàng kim. Nó sẽ bị khóa trong hầu hết thời gian sự kiện và không chứa Celebeams, nhưng cho 10 lần Mã Kim.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -334,7 +334,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Sự kiện này diễn ra trong 3 giai đoạn:",
+        "vi":"Sự kiện trải qua 3 giai đoạn:",
         "ar":"",
         "it":"",
         "pl":"",
@@ -372,7 +372,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giai đoạn này diễn ra trong 10 phút. Cấm PvP trong giai đoạn này, có nghĩa là tất cả bom mà bạn thu thập sẽ được tích lại, và chưa thể dùng.",
+        "vi":"Giai đoạn này diễn ra trong 10 phút. Cấm PvP, có nghĩa là tất cả bom mà bạn thu thập sẽ được tích lại, và chưa thể dùng.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -581,7 +581,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Kinh Nghiệm, Mã Kim",
+        "vi":"EXP, Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -809,7 +809,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Kinh Nghiệm, Mã Kim",
+        "vi":"EXP, Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -848,7 +848,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bạn sẽ được dịch chuyển đến một thế giới <i>Lõi Dung Nham</i> song song nơi mà mọi người có thể chiến đấu, kể cả trong tổ đội hay công hội.",
+        "vi":"Dịch chuyển đến thế giới <i>Lõi Dung Nham</i> khác mà mọi người có thể chiến đấu, kể cả trong tổ đội hay công hội.",
         "ar":"",
         "it":"",
         "pl":"",
