--- a/Translation/general.json
+++ b/Translation/general.json
@@ -182,7 +182,7 @@
         "de":"Exp",
         "jp":"",
         "pt":"",
-        "vi":"K.Nghiệm",
+        "vi":"EXP",
         "ar":"",
         "it":"",
         "pl":"",
@@ -201,7 +201,7 @@
         "de":"Element-Exp",
         "jp":"",
         "pt":"",
-        "vi":"K.Nghiệm Nguyên Tố",
+        "vi":"EXP Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
