--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2310,7 +2310,7 @@
         "de":"Seelensammlung aktivieren. Kann die Seelen der Ziele sehen, während Monster getötet werden. Plünderung von Seelen bietet Erfahrung. Auch das wiederholte Aufnehmen von Seelen derselben Farbe erhöht den Erfahrungsvorteil.",
         "jp":"",
         "pt":"",
-        "vi":"Kích hoạt Kiếm Hồn. Cho khả năng thấy linh hồn của mục tiêu khi giết quái vật. Nhặt linh hồn sẽ cho điểm Kinh Nghiệm. Và đồng thời khi nhặt linh hồn cùng màu liên tiếp sẽ tăng thêm lợi ích điểm Kinh Nghiệm nhận được.",
+        "vi":"Kích hoạt Kiếm Hồn. Cho khả năng thấy linh hồn của mục tiêu khi giết quái vật. Nhặt linh hồn sẽ cho EXP. Và đồng thời khi nhặt linh hồn cùng màu liên tiếp sẽ tăng thêm lợi ích EXP nhận được.",
         "ar":"",
         "it":"",
         "pl":"",
