--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8610,7 +8610,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"[Linh Trứng] Lãnh Long",
+		"vi":"[Linh Trứng] Hàn Long",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -8838,7 +8838,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Lãnh Long Trưởng Thành",
+        "vi":"[Linh Trứng] Hàn Long Trưởng Thành",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8914,7 +8914,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Lính Xung Kích Katrul",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8933,7 +8933,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Cung Thủ Katrul",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8952,7 +8952,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Bầy Nhầy Trên Trời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8971,7 +8971,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Kim Long Con",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8990,7 +8990,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Sói Sừng Nhanh Nhẹn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9009,7 +9009,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Rafflesia",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9028,7 +9028,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Khỉ Đột Thép",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9047,7 +9047,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Kỵ Sĩ Katrul",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9066,7 +9066,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Kim Long",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9085,7 +9085,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Khỉ Đột Thép Nâu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9104,7 +9104,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Hồ Điệp Tiên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9123,7 +9123,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Bom Bay",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9142,7 +9142,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Khỉ Đột Thép Tối Thượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9161,7 +9161,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Kẻ Bảo Hộ Tháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9180,7 +9180,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Bầy Nhầy Đồ Chơi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9199,7 +9199,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Lính Sắt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9218,7 +9218,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Bọ Kích Nổ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9238,7 +9238,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Bầy Nhầy Bùn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9257,7 +9257,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Dơi Cống Nước",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9276,7 +9276,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Chuột Nô Lệ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9295,7 +9295,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Chuột Tu Điên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9314,7 +9314,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Máy Phun Độc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9333,7 +9333,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Chuột Lanh Sắc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9352,7 +9352,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Đội Trưởng Hạ Bệ Quốc Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9371,7 +9371,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Yết Sư Cơ Khí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9390,7 +9390,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Scythie",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9409,7 +9409,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Pha-ra-ông Bất Tử",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9657,7 +9657,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "[Linh Trứng] Wheatley",
         "ar": "",
         "it": "",
         "pl": "",
@@ -12279,7 +12279,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"Lãnh Long",
+		"vi":"Hàn Long",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -12507,7 +12507,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Lãnh Long Trưởng Thành",
+        "vi":"Hàn Long Trưởng Thành",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12583,7 +12583,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lính Xung Kích Katrul",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12602,7 +12602,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cung Thủ Katrul",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12621,7 +12621,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bầy Nhầy Trên Trời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12640,7 +12640,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kim Long Con",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12659,7 +12659,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sói Sừng Nhanh Nhẹn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12678,7 +12678,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rafflesia",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12697,7 +12697,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khỉ Đột Thép",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12716,7 +12716,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kỵ Sĩ Katrul",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12735,7 +12735,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kim Long",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12754,7 +12754,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khỉ Đột Thép Nâu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12773,7 +12773,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hồ Điệp Tiên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12792,7 +12792,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bom Bay",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12811,7 +12811,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khỉ Đột Thép Tối Thượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12830,7 +12830,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kẻ Bảo Hộ Tháp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12849,7 +12849,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bầy Nhầy Đồ Chơi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12868,7 +12868,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lính Sắt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12887,7 +12887,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bọ Kích Nổ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12907,7 +12907,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bầy Nhầy Bùn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12926,7 +12926,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dơi Cống Nước",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12945,7 +12945,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chuột Nô Lệ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12964,7 +12964,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chuột Tu Điên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -12983,7 +12983,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Máy Phun Độc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13002,7 +13002,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chuột Lanh Sắc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -13249,7 +13249,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Wheatley",
         "ar": "",
         "it": "",
         "pl": "",
@@ -16916,7 +16916,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc X2 Kinh Nghiệm",
+        "vi":"Ngọc X2 EXP",
         "ar":"",
         "it":"",
         "pl":"",
@@ -16935,7 +16935,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc X5 Kinh Nghiệm",
+        "vi":"Ngọc X5 EXP",
         "ar":"",
         "it":"",
         "pl":"",
@@ -16954,7 +16954,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngọc X10 Kinh Nghiệm",
+        "vi":"Ngọc X10 EXP",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22818,7 +22818,7 @@
         "de":"Zersprungener Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Vàng Nứt",
+        "vi":"Hoàng Sắc Ma Tinh - Nứt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22837,7 +22837,7 @@
         "de":"Zersprungener Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Đỏ Nứt",
+        "vi":"Xích Sắc Ma Tinh - Nứt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22856,7 +22856,7 @@
         "de":"Zersprungener Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebream Lam Nứt",
+        "vi":"Bích Sắc Ma Tinh - Nứt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22875,7 +22875,7 @@
         "de":"Roher Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Vàng Thô",
+        "vi":"Hoàng Sắc Ma Tinh - Thô",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22894,7 +22894,7 @@
         "de":"Roher Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Đỏ Thô",
+        "vi":"Xích Sắc Ma Tinh - Thô",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22913,7 +22913,7 @@
         "de":"Roher Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Lam Thô",
+        "vi":"Bích Sắc Ma Tinh - Thô",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22932,7 +22932,7 @@
         "de":"Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Vàng Thường",
+        "vi":"Hoàng Sắc Ma Tinh - Thường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22951,7 +22951,7 @@
         "de":"Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Đỏ Thường",
+        "vi":"Xích Sắc Ma Tinh - Thường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22970,7 +22970,7 @@
         "de":"Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Lam Thường",
+        "vi":"Bích Sắc Ma Tinh - Thường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22989,7 +22989,7 @@
         "de":"Perfekter Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Vàng Hoàn Hảo",
+        "vi":"Hoàng Sắc Ma Tinh - Hoàn Hảo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23008,7 +23008,7 @@
         "de":"Perfekter Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Đỏ Hoàn Hảo",
+        "vi":"Xích Sắc Ma Tinh - Hoàn Hảo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23027,7 +23027,7 @@
         "de":"Perfekter Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Lam Hoàn Hảo",
+        "vi":"Bích Sắc Ma Tinh - Hoàn Hảo",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23046,7 +23046,7 @@
         "de":"Glänzender Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Vàng Lấp Lánh",
+        "vi":"Hoàng Sắc Ma Tinh - Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23065,7 +23065,7 @@
         "de":"Glänzender Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Đỏ Lấp Lánh",
+        "vi":"Xích Sắc Ma Tinh - Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23084,7 +23084,7 @@
         "de":"Glänzender Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Lam Lấp Lánh",
+        "vi":"Bích Sắc Ma Tinh - Lấp Lánh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23103,7 +23103,7 @@
         "de":"Glorreicher Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Vàng Vinh Quang",
+        "vi":"Hoàng Sắc Ma Tinh - Hào Nhoáng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23122,7 +23122,7 @@
         "de":"Glorreicher Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Đỏ Vinh Quang",
+        "vi":"Xích Sắc Ma Tinh - Hào Nhoáng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23141,7 +23141,7 @@
         "de":"Glorreicher Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Lam Vinh Quang",
+        "vi":"Bích Sắc Ma Tinh - Hào Nhoáng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23160,7 +23160,7 @@
         "de":"Blendender Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Vàng Sáng Ngời",
+        "vi":"Hoàng Sắc Ma Tinh - Sáng Ngời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23179,7 +23179,7 @@
         "de":"Blendender Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Đỏ Sáng Ngời",
+        "vi":"Xích Sắc Ma Tinh - Sáng Ngời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23198,7 +23198,7 @@
         "de":"Blendender Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Lam Sáng Ngời",
+        "vi":"Bích Sắc Ma Tinh - Sáng Ngời",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23217,7 +23217,7 @@
         "de":"Ultimativer Gelber Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Vàng Tối Thượng",
+        "vi":"Hoàng Sắc Ma Tinh - Tối Thượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23236,7 +23236,7 @@
         "de":"Ultimativer Roter Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Đỏ Tối Thượng",
+        "vi":"Xích Sắc Ma Tinh - Tối Thượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -23255,7 +23255,7 @@
         "de":"Ultimativer Blauer Celebeam",
         "jp":"",
         "pt":"",
-        "vi":"Đá Celebeam Lam Tối Thượng",
+        "vi":"Bích Sắc Ma Tinh - Tối Thượng",
         "ar":"",
         "it":"",
         "pl":"",
