--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13009,6 +13009,83 @@
         "th":"",
         "id":""
     },
+    "item.4176.name":{
+        "en":"King Assault Captain",
+        "fr":"Capitaine d'Assaut du Roi",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4177.name":{
+        "en":"Mechanical Manticore",
+        "fr":"Manticore Mécanique",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.4178.name":{
+        "en":"Scythie",
+        "fr":"Scythie",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.479.name":{
+        "en":"Undead Pharaoh",
+        "fr":"Pharaon mort-vivant",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    
     "item.4801.name":{
         "en":"Immortal",
         "fr":"Immortel",
