--- a/Translation/map.json
+++ b/Translation/map.json
@@ -3362,6 +3362,44 @@
         "th":"",
         "id":""
     },
+    "map.Challenge_55B.name":{
+        "en":"Halo Coliseum",
+        "fr":"Colisée du Halo",
+        "es":"",
+        "zh-cn":"魔光角斗场",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Đấu Trường Danh Vọng",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Challenge_55C.name":{
+        "en":"Demons Prison",
+        "fr":"Prison des Démons",
+        "es":"",
+        "zh-cn":"恶魔监狱",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Quỷ Ngục",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.Instance_20_map1.name":{
         "en":"Chaotic Jungles North",
         "fr":"Nord des Jungles Chaotiques",
