--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -739,5 +739,62 @@
         "pl": "",
         "th": "",
         "id": ""
+    },
+    "instance.INSTANCE_80.name":{
+        "en": "Machine Smelter",
+        "fr": "Fonderie de Machines",
+        "es": "",
+        "zh-cn": "",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "",
+        "jp": "",
+        "pt": "",
+        "vi": "",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_80.description.reward.normal":{
+        "en": "Lv80 common materials, Costume sets and Runestones.",
+        "fr": "Materiel commun Nv80, Costumes et Pierres runiques.",
+        "es": "Materiales usuales Nv80, Conjuntos de vestuario y Piedras rúnicas.",
+        "zh-cn": "80级普通材料、套装符文石.",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Gewöhnliches Material Lv80, Kostüme und Runensteine.",
+        "jp": "",
+        "pt": "",
+        "vi": "Nguyên liệu thường Cấp 80, Bộ Trang Phục và Đá Cổ Ngữ.",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
+    },
+    "instance.INSTANCE_80.description.reward.special":{
+        "en": "Glory Gem",
+        "fr": "Gemme de Gloire",
+        "es": "Gema de Gloria",
+        "zh-cn": "荣誉宝石",
+        "zh-tw":"",
+        "kr": "",
+        "ru": "",
+        "tr": "",
+        "de": "Rumstein",
+        "jp": "",
+        "pt": "",
+        "vi": "Đá Vinh Quang",
+        "ar": "",
+        "it": "",
+        "pl": "",
+        "th": "",
+        "id": ""
     }
 }
