--- a/Translation/map.json
+++ b/Translation/map.json
@@ -3761,6 +3761,63 @@
         "th":"",
         "id":""
     },
+    "map.Instance_80_map1.name":{
+        "en":"Factory Back Hill",
+        "fr":"Colline Arrière de l'Usine",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_80_map2.name":{
+        "en":"Factory Lab",
+        "fr":"Laboratoire de l'Usine",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_80_map3.name":{
+        "en":"Experimental Forge",
+        "fr":"Forge Expérimentale",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.S_Slime_Kingdom.name":{
         "en":"Slime Kingdom",
         "fr":"Royaume des Slime",
